import  Estacion  from "./estacion";
export default class CocinaFria extends Estacion{


    
}