export default abstract class Estacion{

public preparar(item:any):any{
    return item;
}


}